--- a/package.json
+++ b/package.json
@@ -13,10 +13,20 @@
     "@clerk/nextjs": "^4.14.0",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
+    "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.2",
+    "@tiptap/extension-image": "^2.0.2",
+    "@tiptap/extension-placeholder": "^2.0.2",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.2",
+    "@tiptap/react": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "dayjs": "^1.11.7",
+    "html-react-parser": "^3.0.15",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
