--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "superjson": "1.12.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
